WIP. Damsel proto upd